hotfix: z-index issue fixed (#3635)
* hotfix(ui): returned modal z-index default value

* hotfix(condo): decreased notifications z-index

(cherry picked from commit 813e5e45e5ed2efa2ee88c9d6ef9f75a501d29cd)

--- a/packages/ui/src/components/Modal/style.less
+++ b/packages/ui/src/components/Modal/style.less
@@ -156,10 +156,3 @@
     }
   }
 }
-
-.condo-modal-root > .condo-modal-wrap,
-.condo-modal-root > .condo-modal-mask {
-  // NOTE: most of UI elements has z-index in between 1001 and 1100,
-  // And we want modal to be on top of them, so that's the reason behind 2000 value
-  z-index: 2000;
-}
